--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.10.1
+Flask-WTF==0.10.3
 gunicorn==19.1.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
+WTForms==2.0.1
